# mkdocs-pyscript

./: .gitignore  DEVELOPMENT.md  LICENSE  MANIFEST.in  Pipfile  README.md  changelog.md  environment.yml  esbuild.mjs  makefile  manifest.in  package-lock.json  package.json  pyproject.toml  requirements.txt  roadmap.md  setup.py
mkdocs-pyscript/: plugin.py
mkdocs_pyscript/: __init__.py  makeblocks.js  makeblocks.py  mdx_comment_codeblock.py  mini-cois.js  minicoi.py  plugin.py  prePostExtension.py
mkdocs_pyscript/css/: pyrepl.css
mkdocs_pyscript/js/: makeblocks.js  mini-coi.js
scripts/: buildjs.py
tests/: conftest.py  material_config.yml  support.py  test_dynamic.py  test_static.py
tests/basic/: mkdocs.yml
tests/basic/docs/: index.md
tests/prepost/: mkdocs.yml
tests/prepost/docs/: index.md
tests/static/: conftest.py  test_basic.py  test_dynamic.py  test_static.py
tests/static/basic/docs/: index.md
